--- a/day_2/ex02/index.html
+++ b/day_2/ex02/index.html
@@ -15,7 +15,7 @@
         <div class="calculate">
             <table border="1px" cellspacing = "0" style="width: 30%;">
                 <tr>
-                    <th style="text-align: right;" colspan="4">9 + 9</th>
+                    <td style="text-align: right;" colspan="4">9 + 9</td>
                 </tr>
                 <tr>
                     <td>1</td>
