--- a/day_2/ex03/index.html
+++ b/day_2/ex03/index.html
@@ -24,7 +24,7 @@
                     <table>
                         <tr>
                             <td><input placeholder="* Enter your full name" type="text"/></td>
-                            <td><input placeholder="* Enter your email address" type="text"/></td>
+                            <td><input placeholder="* Enter your email address" type="email"/></td>
                         </tr>
                         <tr>
                             <td><input placeholder="* Enter your subject" type="text"/></td>
