--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <li><a href="day_2">Bài tập day_2</a></li>
             <li><a href="day_3">Bài tập day_3</a></li>
             <li><a href="day_4">Bài tập day_4</a></li>
+            <li><a href="day_5">Bài tập day_5</a></li>
         </ul>
     </div>
 </body>
