--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
             <li><a href="day_3">Bài tập day_3</a></li>
             <li><a href="day_4">Bài tập day_4</a></li>
             <li><a href="day_5">Bài tập day_5</a></li>
+            <li><a href="day_6">Bài tập day_6</a></li>
+            <li><a href="day_7">Bài tập day_7</a></li>
         </ul>
     </div>
 </body>
