--- a/day_7/ex02/index.html
+++ b/day_7/ex02/index.html
@@ -32,9 +32,24 @@
                 <h2>Login to <strong>Your account</strong></h2>
                 <form action="#" class="login-here">
                     <label>
-                        <input type="text" name="" placeholder="Email Address">
+                        <input type="text" placeholder="Email Address">
                     </label>
+                    <label>
+                        <input type="text" placeholder="Password">
+                    </label>
+                    <div class="remmem-form">
+                        <label>
+                            <input type="checkbox">
+                            <span>Remember me</span>
+                        </label>
+                        <a href="#">Forgot Password</a>
+                    </div>
+                    <button>LOGIN</button>
                 </form>
+                <div class="form-footer">
+                    <p>Don't have an account?</p>
+                    <a href="#">Register here</a>
+                </div>
             </div>
         </div>
     </section>
