--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <li><a href="day_5">Bài tập day_5</a></li>
             <li><a href="day_6">Bài tập day_6</a></li>
             <li><a href="day_7">Bài tập day_7</a></li>
+            <li><a href="day_8">Bài tập day_8</a></li>
         </ul>
     </div>
 </body>
