--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <li><a href="day_6">Bài tập day_6</a></li>
             <li><a href="day_7">Bài tập day_7</a></li>
             <li><a href="day_8">Bài tập day_8</a></li>
+            <li><a href="day_9">Bài tập day_9</a></li>
         </ul>
     </div>
 </body>
