--- a/day_9/ex01/index.html
+++ b/day_9/ex01/index.html
@@ -4,70 +4,122 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sell Course Online</title>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Space+Grotesk:wght@300..700&display=swap"
         rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
-
     <link rel="stylesheet" href="bai1.css">
 </head>
 
 <body>
-    <main class="main">
-        <section class=" col-6 form-intro">
-            <div class="intro-common">
-                <div class="info-text">
-                    <h2>Together We build</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem, ut?</p>
-                    <a href="#">Family law</a>
-                </div>
-                <div class="info-time">
-                    <p><span></span>2012 - 2007</p>
+    <section class="roadmap-section">
+        <div class="col2-3">
+            <div class="col1-2">
+                <ul class=" timeline-list">
+                    <li class="timeline-item">
+                        <div class="timeline-item-transition">
+                            <div class="timeline-header">
+                                <h2 class="tineline-heading transition-item transition-slide-right">Together We Build
+                                </h2>
+                                <div class="timeline-point"></div>
+                                <div class="timeline-year transition-item transition-slide-left">2012 - 2007</div>
+                            </div>
+                            <div class="timeline-body">
+                                <p class="timeline-description transition-item transition-slide-right">In quái Vitae non
+                                    alias nulla qui .dolores dolor non tempora tenetur </p>
+                                <a href="#">
+                                    <button class="timeline-button transition-item transition-slide-right">
+                                        Family Law
+                                    </button>
+                                </a>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="timeline-item">
+                        <div class="timeline-item-transition">
+                            <div class="timeline-header">
+                                <h2 class="tineline-heading transition-item transition-slide-right">Completed 1000 Cases
+                                </h2>
+                                <div class="timeline-point-wrapper">
+                                    <div class="timeline-point"></div>
+                                    <div class="timeline-year transition-item transition-slide-left">2016 - 2012</div>
+                                </div>
+                            </div>
+                            <div class="timeline-body">
+                                <p class="timeline-description transition-item transition-slide-right">In quái Vitae non
+                                    alias nulla qui .dolores dolor non tempora tenetur </p>
+                                <a href="#">
+                                    <button class="timeline-button transition-item transition-slide-right">
+                                        Criminal Law
+                                    </button>
+                                </a>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="timeline-item">
+                        <div class="timeline-item-transition">
+                            <div class="timeline-header">
+                                <h2 class="tineline-heading transition-item transition-slide-right">We Are Number One
+                                </h2>
+                                <div class="timeline-point-wrapper">
+                                    <div class="timeline-point"></div>
+                                    <div class="timeline-year transition-item transition-slide-left">2018 - 2016</div>
+                                </div>
+                            </div>
+                            <div class="timeline-body">
+                                <p class="timeline-description transition-item transition-slide-right">In quái Vitae non
+                                    alias nulla qui .dolores dolor non tempora tenetur
+                                </p>
+                                <a href="#">
+                                    <button class="timeline-button transition-item transition-slide-right">
+                                        Business Law
+                                    </button>
+                                </a>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="timeline-item">
+                        <div class="timeline-item-transition">
+                            <div class="timeline-header">
+                                <h2 class="tineline-heading transition-item transition-slide-right">Intellectual
+                                    Property </h2>
+                                <div class="timeline-point-wrapper">
+                                    <div class="timeline-point"></div>
+                                    <div class="timeline-year transition-item transition-slide-left">2022 - 2018</div>
+                                </div>
+                            </div>
+                            <div class="timeline-body">
+                                <p class="timeline-description transition-item transition-slide-right">In quái Vitae non
+                                    alias nulla qui .dolores dolor non tempora tenetur </p>
+                                <a href="#">
+                                    <button class="timeline-button transition-item transition-slide-right">Car
+                                        Accident
+                                    </button>
+                                </a>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="col1-3">
+            <div class="timeline-image-list">
+                <div class="timeline-image-item"> <img src="https://picsum.photos/200/300"
+                        alt="Timeline Image from 2007-2012" title="Hello, it's great to have you here with us">
+                    <div class="illustration-info-wapper">
+                        <div class="illustration-blue-background"> </div>
+                        <div class="illustration-description-wrapper">
+                            <div class="illustration-description">
+                                <h3 class="illustration-value"> +76</h3>
+                                <p class="illustration-label">Winning Awards</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="intro-common">
-                <div class="info-text">
-                    <h2>Completed 1000 Cases</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem, ut?</p>
-                    <a href="#">Criminal Law</a>
-                </div>
-                <div class="info-time">
-                    <p><span></span>2012 - 2007</p>
-                </div>
-            </div>
-            <div class="intro-common">
-                <div class="info-text">
-                    <h2>We Are Number One</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem, ut?</p>
-                    <a href="#">Business Law</a>
-                </div>
-                <div class="info-time">
-                    <p><span></span>2012 - 2007</p>
-                </div>
-            </div>
-            <div class="intro-common">
-                <div class="info-text">
-                    <h2>Intellectual Property</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem, ut?</p>
-                    <a href="#">Car Accident</a>
-                </div>
-                <div class="info-time">
-                    <p><span></span>2012 - 2007</p>
-                </div>
-            </div>
-        </section>
-    <!-- End intro -->
-        <section class="col-6 form-img">
-            <div class="img-in">
-                <div class="img-on">
-                    <img src="https://picsum.photos/100/150" alt="">
-                    <div class="overlay"></div>
-                </div>
-                
-            </div>
-        </section>
-    </main>
+        </div>
+    </section>
 </body>
 
 </html>
