--- a/day_9/ex01/index.html
+++ b/day_9/ex01/index.html
@@ -105,8 +105,7 @@
         </div>
         <div class="col1-3">
             <div class="timeline-image-list">
-                <div class="timeline-image-item"> <img src="https://picsum.photos/200/300"
-                        alt="Timeline Image from 2007-2012" title="Hello, it's great to have you here with us">
+                <div class="timeline-image-item"> <img src="https://picsum.photos/100/100">
                     <div class="illustration-info-wapper">
                         <div class="illustration-blue-background"> </div>
                         <div class="illustration-description-wrapper">
