--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
             <li><a href="day_7">Bài tập day_7</a></li>
             <li><a href="day_8">Bài tập day_8</a></li>
             <li><a href="day_9">Bài tập day_9</a></li>
+            <li><a href="day_10">Bài tập day_10</a></li>
+
         </ul>
     </div>
 </body>
