--- a/day_10/ex03/index.html
+++ b/day_10/ex03/index.html
@@ -13,7 +13,7 @@
             <div class="letter">
                 <div class="letter-border"></div>
                 <div class="letter-title"></div>
-                <div class="letter-context"></div>
+                <div class="letter-context">Yêu Hà Vãi Lồn</div>
                 <div class="letter-stamp">
                     <div class="letter-stamp-inner"></div>
                 </div>
