--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <li><a href="day_8">Bài tập day_8</a></li>
             <li><a href="day_9">Bài tập day_9</a></li>
             <li><a href="day_10">Bài tập day_10</a></li>
-
+            <li><a href="day_11">Bài tập day_11</a></li>
         </ul>
     </div>
 </body>
