nop bai buoi 13

--- a/day_11/index.html
+++ b/day_11/index.html
@@ -87,7 +87,7 @@
                 <div class="serve-item__hover"></div>
                 <div class="serve-item__on">
                     <img src="./asset/svg/money.svg" alt="">
-                    <h3>Free shipping</h3>
+                    <h3>15 days returns</h3>
                     <p>Enjoy Order in a hand using the fresness of groceries</p>
                 </div>
             </div>
@@ -95,7 +95,7 @@
                 <div class="serve-item__hover"></div>
                 <div class="serve-item__on">
                     <img src="./asset/svg/service.svg" alt="">
-                    <h3>Free shipping</h3>
+                    <h3>Secure checkout</h3>
                     <p>Enjoy Order in a hand using the fresness of groceries</p>
                 </div>
             </div>
