--- a/day_13/index.html
+++ b/day_13/index.html
@@ -19,6 +19,10 @@
   <body>
     <section class="landing-login">
 
+      <!-- <input class="left" id="login"  type="checkbox" /> -->
+      <input class="login" id="btn-login" hidden type="checkbox" checked />
+      <!-- End input animation -->
+
       <div class="landing-sup__img"></div>
       <!-- End landing-sub-img -->
 
@@ -31,7 +35,6 @@
               <div class="landing-info__logo">
                 <img src="./img/icons8-viking-64.png" alt="" />
               </div>
-
               <p>WELCOME TO</p>
               <h1>VIKINGER</h1>
               <p>
@@ -39,21 +42,20 @@
                 your friends and play with our quests and badges gamification
                 system!
               </p>
-
+ 
               <div class="info-btn">
-                <div class="div-btn__click">
-                  <input class="left" id="left" hidden type="checkbox" />
-                  <label for="left" class="btn-click btn-click__left">
+                <div class="div-btn__click"> 
+                  <label for="btn-login" class="btn-click btn-click__left">
                         <span>Login</span>
                   </label>
                 </div>
                 <div class="div-btn__click">
-                  <input class="right" id="=right" hidden type="checkbox" />
-                  <label for="right" class="btn-click btn-click__right">
+                  <label for="btn-login" class="btn-click btn-click__right">
                     <span>Register</span>
                   </label>
                 </div>
               </div>
+              <!-- end info-btn -->
             </div>
             <!-- End  Landing info -->
           </div>
@@ -90,7 +92,6 @@
                             <a href=""><i class="fa-brands fa-twitch"></i></a>
                             <a href=""><i class="fa-brands fa-youtube"></i></a>
                         </div>
-                            
                     </form>
                 </div>
             </div>
