--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
             <li><a href="day_9">Bài tập day_9</a></li>
             <li><a href="day_10">Bài tập day_10</a></li>
             <li><a href="day_11">Bài tập day_11</a></li>
+            <li><a href="day_12">Bài tập day_12</a></li>
+            <li><a href="day_13">Bài tập day_13</a></li>
         </ul>
     </div>
 </body>
