--- a/day_13/index.html
+++ b/day_13/index.html
@@ -94,6 +94,37 @@
                         </div>
                     </form>
                 </div>
+                <div class="login-form__register">
+                  <div class="login-form__img">
+                      <img src="./img/rocket.webp" alt="">
+                  </div>
+                  <h2>Account Login</h2>
+                  <form class=".form" action="">
+                      <div class="form-input">
+                          <input id="user" type="text" name="username" class="form__input" autocomplete="off" placeholder=" ">
+                          <label class="form__label" for="user">Username or Email</label>
+                      </div>
+                      <div class="form-input">
+                          <input id="pass" type="password" name="pass" class="form__input" autocomplete="off" placeholder=" ">
+                          <label class="form__label" for="pass" >Password</label>
+                      </div>
+                      <div class="form-option">
+                          <label>
+                              <input hidden type="checkbox" name="checked">
+                              <span>Remamber Me</span>
+                          </label>
+                          <a href="#">Forgot Password?</a>
+                      </div>
+                      <button class="login-btn">Login to your Account!</button>
+                      <p class="social-option">Login with your Social Account</p>
+                      <div class="social-app">
+                        <a href=""><i class="fa-brands fa-facebook"></i></a>
+                          <a href=""><i class="fa-brands fa-square-twitter"></i></a>
+                          <a href=""><i class="fa-brands fa-twitch"></i></a>
+                          <a href=""><i class="fa-brands fa-youtube"></i></a>
+                      </div>
+                  </form>
+              </div>
             </div>
           </div>
           <!-- End col-6 -->
